# msds_ws

./: .gitignore  README.md  commands.txt  frames_2025-05-17_21.11.23.gv  frames_2025-05-21_00.53.43.gv  personal_notes.txt  setup.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/msds_bringup/share/msds_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msds_bringup/share/msds_bringup/cmake/: msds_bringupConfig.cmake
install/msds_bringup/share/msds_bringup/launch/: real_robot.launch.py
install/msds_controller/share/ament_index/resource_index/parent_prefix_path/: msds_controller
install/msds_controller/share/msds_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msds_controller/share/msds_controller/cmake/: msds_controllerConfig.cmake
install/msds_controller/share/msds_controller/launch/: controller.launch.py
install/msds_firmware/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: msds_firmware
install/msds_firmware/share/ament_index/resource_index/parent_prefix_path/: msds_firmware
install/msds_firmware/share/msds_firmware/: local_setup.dsv  local_setup.sh  msds_interface.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msds_firmware/share/msds_firmware/cmake/: ament_cmake_export_dependencies-extras.cmake  msds_firmwareConfig.cmake
install/msds_localization/share/ament_index/resource_index/parent_prefix_path/: msds_localization
install/msds_localization/share/msds_localization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msds_localization/share/msds_localization/cmake/: msds_localizationConfig.cmake
install/msds_localization/share/msds_localization/config/: ekf.yaml
log/: latest_build  latest_list
src/msds_bringup/: CMakeLists.txt  package.xml
src/msds_bringup/config/: rplidar_c1.yaml
src/msds_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/msds_controller/: CMakeLists.txt  package.xml
src/msds_controller/config/: msds_controllers.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/msds_controller/launch/: controller.launch.py  gazebo_controller.launch.py
src/msds_controller/msds_controller/: simple_controller.py  twist_relay.py
src/msds_description/: CMakeLists.txt  package.xml
src/msds_description/launch/: display.launch.py  gazebo.launch.py
src/msds_description/meshes/: base_link.stl  imu_link.stl  lidar_link.stl
src/msds_description/rviz/: display.rviz
src/msds_description/urdf/: msds.trans  msds.urdf.xacro  msds_gazebo.xacro  msds_ros2_control.xacro  properties.xacro
src/msds_description/worlds/: test.world
src/msds_firmware/: CMakeLists.txt  msds_interface.xml  package.xml
src/msds_firmware/firmware/encoder_test/: encoder_test.ino
src/msds_firmware/firmware/esp_oled_keypad/: esp_oled_keypad.ino
src/msds_firmware/firmware/robot_control/: esp_uart.ino  robot_control.ino  robot_control_2.ino
src/msds_firmware/firmware/simple_encoder_reader/: simple_encoder_reader.ino
src/msds_firmware/firmware/simple_motor_control/: simple_motor_control.ino
src/msds_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/msds_firmware/firmware/simple_uart_arduino/: simple_uart_arduino.ino
src/msds_firmware/firmware/simple_uart_esp/: simple_uart_esp.ino
src/msds_firmware/include/msds_firmware/: msds_interface.hpp
src/msds_firmware/launch/: hardware_interface.launch.py
src/msds_firmware/msds_firmware/: mpu6050_driver.py  simple_serial_receiver.py  simple_serial_transmitter.py
src/msds_firmware/src/: msds_interface.cpp  simple_serial_transmitter.cpp
src/msds_localization/: CMakeLists.txt  package.xml
src/msds_localization/config/: amcl.yaml  ekf.yaml  global_ekf.yaml
src/msds_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/msds_localization/msds_localization/: imu_republisher.py
src/msds_localization/rviz/: global_localization.rviz
src/msds_mapping/: CMakeLists.txt  package.xml
src/msds_mapping/config/: slam_toolbox.yaml
src/msds_mapping/launch/: slam.launch.py
src/msds_mapping/rviz/: slam.rviz
src/msds_msgs/: CMakeLists.txt  package.xml
src/msds_msgs/msg/: WheelStates.msg
src/msds_utils/: package.xml  setup.cfg  setup.py
src/msds_utils/msds_utils/: laser_filter.py  mecanum_odometry.py  noisy_odometry.py  safety_stop.py  standoff.py  twist_relay.py
